--- a/庫中庫的內聚與耦合/庫中庫的內聚與耦合.vcxproj.filters
+++ b/庫中庫的內聚與耦合/庫中庫的內聚與耦合.vcxproj.filters
@@ -15,7 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1.c">
+    <ClInclude Include="string.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="string.c">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="main.c">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
