--- a/字串II/字串II.vcxproj.filters
+++ b/字串II/字串II.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClCompile Include="字串處理.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="..\temp\replaceStr.c">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
