--- a/數組指針/數組指針.vcxproj
+++ b/數組指針/數組指針.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{DD25C524-25FC-45C8-80EB-95670FDBF4A5}</ProjectGuid>
-    <RootNamespace>結構體數組</RootNamespace>
+    <ProjectGuid>{8DDD0D49-48B7-41D8-B34D-7EEB1BEF8643}</ProjectGuid>
+    <RootNamespace>數組指針</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -76,10 +76,14 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <BrowseInformation>true</BrowseInformation>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
     </Link>
+    <Bscmake>
+      <PreserveSbr>true</PreserveSbr>
+    </Bscmake>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -123,9 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="結構體套一級指針.c" />
-    <ClCompile Include="結構體數組.c" />
-    <ClCompile Include="計數.c" />
+    <ClCompile Include="c提高day04作業.c" />
+    <ClCompile Include="typedef數組指針.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
