--- a/數組指針/數組指針.vcxproj.filters
+++ b/數組指針/數組指針.vcxproj.filters
@@ -15,13 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="結構體數組.c">
+    <ClCompile Include="c提高day04作業.c">
       <Filter>來源檔案</Filter>
     </ClCompile>
-    <ClCompile Include="計數.c">
-      <Filter>來源檔案</Filter>
-    </ClCompile>
-    <ClCompile Include="結構體套一級指針.c">
+    <ClCompile Include="typedef數組指針.c">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
