--- a/結構體/結構體.vcxproj.filters
+++ b/結構體/結構體.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="結構體與結構體數組副本機制.c">
       <Filter>原始程式檔</Filter>
     </ClCompile>
+    <ClCompile Include="結構體的偏移量.c">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
