--- a/結構體作業/結構體作業.vcxproj.filters
+++ b/結構體作業/結構體作業.vcxproj.filters
@@ -15,13 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="結構體數組.c">
-      <Filter>來源檔案</Filter>
-    </ClCompile>
-    <ClCompile Include="計數.c">
-      <Filter>來源檔案</Filter>
-    </ClCompile>
-    <ClCompile Include="結構體套一級指針.c">
+    <ClCompile Include="main.c">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
