--- a/結構體的偏移量/結構體的偏移量.vcxproj
+++ b/結構體的偏移量/結構體的偏移量.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{DD25C524-25FC-45C8-80EB-95670FDBF4A5}</ProjectGuid>
-    <RootNamespace>結構體數組</RootNamespace>
+    <ProjectGuid>{704C0C31-FD7D-49F0-A1E6-264E97840938}</ProjectGuid>
+    <RootNamespace>結構體的偏移量</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,9 +123,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="結構體套一級指針.c" />
-    <ClCompile Include="結構體數組.c" />
-    <ClCompile Include="計數.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
