--- a/巨集macro/巨集macro.vcxproj.filters
+++ b/巨集macro/巨集macro.vcxproj.filters
@@ -18,5 +18,14 @@
     <ClCompile Include="巨集使用方式.c">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="常見用法.c">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="一些內置宏.c">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="test.md" />
   </ItemGroup>
 </Project>
