--- a/數據結構_II_單向鏈表-版本二/數據結構_II_單向鏈表-版本二.vcxproj
+++ b/數據結構_II_單向鏈表-版本二/數據結構_II_單向鏈表-版本二.vcxproj
@@ -18,17 +18,10 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="LinkList.c" />
-    <ClCompile Include="單向鏈表(版本一).c" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="LinkList.h" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{7D248C0D-FB9B-464B-8C80-075BED688F3F}</ProjectGuid>
-    <RootNamespace>數據結構II單向鏈表版本一</RootNamespace>
+    <ProjectGuid>{942E8B05-5FB7-4D83-904F-2C153D9A760B}</ProjectGuid>
+    <RootNamespace>數據結構II單向鏈表版本二</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -144,6 +137,9 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="01 单向链表(版本二).c" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
