--- a/棧-應用_就近匹配/棧-應用_就近匹配.vcxproj.filters
+++ b/棧-應用_就近匹配/棧-應用_就近匹配.vcxproj.filters
@@ -15,15 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="LinkList.c">
+    <ClCompile Include="05 栈的应用_就近匹配.c">
       <Filter>來源檔案</Filter>
     </ClCompile>
-    <ClCompile Include="單向鏈表(版本一).c">
+    <ClCompile Include="SeqStack.c">
       <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LinkList.h">
+    <ClInclude Include="SeqStack.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
